<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_login_Fragment">Email</string>
    <string name="password_login_Fragment">Password</string>
    <string name="register_string_fragment_login">Create new account</string>
    <string name="login_string_fragment_login">Login</string>
    <string name="welcome_string_fragment_welcome">Welcome</string>
    <string name="details_string_fragment_welcome">Hi,Please click Instructions to continue.</string>
    <string name="next_string_fragment_welcome">Instructions</string>
    <string name="details_string_fragment_instruction">Next page will show you the list of shoes. please Click next to continue</string>
    <string name="Next_string_fragment_instructions">Next</string>
    <string name="or">OR</string>
    <string name="shoe_list">Shoe List</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_detail_company">Company</string>
    <string name="shoe_detail_size">Shoe size</string>
    <string name="shoe_detail_description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="shoe_detail">shoe details</string>

</resources>
