<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <!-- linear layout because it is a simple and small data and no need complex data!-->
    <LinearLayout
        android:id="@+id/loginFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A4FCD3"
        android:orientation="vertical"
        tools:context=".loginFragment">


        <TextView
            android:id="@+id/email_textview_fragment_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:text="@string/email_login_Fragment"
            android:textAlignment="center"
            android:layout_marginTop="70dp"
            android:layout_gravity="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/password_edittext_fragment_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/password_textview_fragment_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/password_login_Fragment"
            android:textColor="@color/cardview_dark_background"
            android:textSize="30dp"
            android:layout_marginTop="50dp"
             />

        <EditText
            android:id="@+id/email_edittext_fragment_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button_fragment_login"
            android:layout_width="211dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="128dp"
            android:text="@string/login_string_fragment_login" />

        <TextView
            android:id="@+id/Or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/or"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="25dp" />

        <Button
            android:id="@+id/register_button_fragment_login"
            android:layout_width="211dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:text="@string/register_string_fragment_login"

            />


    </LinearLayout>



</layout>