<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- linear layout because it is a simple and small data and no need complex data!-->
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".instructionsFragment"
    android:background="#95F593"
    android:id="@+id/instructionsFragment">


       <TextView
           android:id="@+id/instruction_textview_fragment_instruction"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/next_string_fragment_welcome"
           android:textAlignment="center"
           android:textColor="@color/colorPrimaryDark"
           android:textSize="40dp"
           android:textStyle="bold"
           android:layout_marginLeft="95dp"
           android:layout_marginTop="50dp"
        />

       <TextView
           android:id="@+id/details_textview_fragment_instructions"
           android:layout_width="311dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="160dp"
           android:layout_marginLeft="-260dp"
           android:text="@string/details_string_fragment_instruction"
           android:textAlignment="center"
           android:textSize="37dp" />

       <Button
           android:id="@+id/next_button_fragment_instructions"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Next_string_fragment_instructions"
           android:layout_marginTop="560dp"
           android:layout_marginLeft="-200dp"
           android:textSize="35dp"
          />
   </LinearLayout>
</layout>