<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
    <variable
        name="shoesViewModel"
        type="com.udacity.shoestore.models.ShoesViewModel" />
    <variable
        name="shoeData"
        type="com.udacity.shoestore.models.Shoe" />
    </data>
    <!-- constraint layout because it is a complex and large data need -->
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:id="@+id/show_details_constraint"
    android:layout_height="match_parent"
    tools:context=".detailsFragment"
    android:background="#B5E8B4">
        <TextView
            android:id="@+id/shoe_name_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/shoe_name"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="@color/colorPrimaryDark"
            />

        <EditText
            android:id="@+id/shoe_name_edit"
            android:text="@={shoeData.name}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:inputType="text"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/shoe_name_text"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/shoe_company_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="@id/shoe_name_text"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/shoe_detail_company"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="@color/colorPrimaryDark"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shoe_company_edit"
            android:layout_marginTop="80dp"
            android:inputType="text"
            android:text="@={shoeData.company}"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="@id/shoe_name_edit"
            app:layout_constraintStart_toStartOf="@id/shoe_name_edit"
            app:layout_constraintStart_toEndOf="@id/shoe_company_text"
            app:layout_constraintTop_toTopOf="@id/shoe_name_edit" />
        <TextView
            android:id="@+id/shoe_size_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="@id/shoe_company_text"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/shoe_detail_size"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="@color/colorPrimaryDark"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shoe_size_edit"
            android:layout_marginTop="80dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:text="@={shoeData.size}"
            app:layout_constraintEnd_toEndOf="@id/shoe_company_edit"
            app:layout_constraintStart_toStartOf="@id/shoe_company_edit"
            app:layout_constraintStart_toEndOf="@id/shoe_size_text"
            app:layout_constraintTop_toTopOf="@id/shoe_company_edit" />
        <TextView
            android:id="@+id/shoe_description_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="@id/shoe_size_text"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/shoe_detail_description"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="@color/colorPrimaryDark"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shoe_description_edit"
            android:layout_marginTop="80dp"
            android:inputType="text"
            android:ems="10"
            android:text="@={shoeData.description}"
            app:layout_constraintEnd_toEndOf="@id/shoe_size_edit"
            app:layout_constraintStart_toStartOf="@id/shoe_size_edit"
            app:layout_constraintStart_toEndOf="@id/shoe_size_text"
            app:layout_constraintTop_toTopOf="@id/shoe_size_edit" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel"
            android:textSize="30dp"
            style="@style/DefaultButton"
            android:layout_marginRight="120dp"
            android:layout_marginTop="120dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/shoe_description_text"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> shoesViewModel.onEventSave(shoeData.name, shoeData.size, shoeData.company, shoeData.description)}"
            android:text="@string/save"
            android:id="@+id/save"
            style="@style/DefaultButton"
            android:textSize="30dp"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="170dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/shoe_description_edit"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>